[gd_scene load_steps=13 format=2]

[ext_resource path="res://Level1.tscn" type="PackedScene" id=1]
[ext_resource path="res://character.tscn" type="PackedScene" id=2]
[ext_resource path="res://main.gd" type="Script" id=3]
[ext_resource path="res://coinGold.tscn" type="PackedScene" id=4]
[ext_resource path="res://spikes.tscn" type="PackedScene" id=5]
[ext_resource path="res://Level2.tscn" type="PackedScene" id=6]
[ext_resource path="res://chaman.tscn" type="PackedScene" id=7]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.211765, 0.721569, 0.505882, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="BoxShape" id=6]

[sub_resource type="BoxShape" id=5]

[node name="Spatial" type="Spatial"]
script = ExtResource( 3 )

[node name="character" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.130959, 0, 0.991388, 0, 1, 0, -0.991388, 0, 0.130959, -4.901, 0.5, 0 )

[node name="target" type="Spatial" parent="character"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.962892, 0 )

[node name="score" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Score: 0"

[node name="hp" type="Label" parent="."]
margin_right = 1025.0
margin_bottom = 14.0
text = "HP: 100"
align = 2

[node name="Ground" type="StaticBody" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 20, 0, 0, 0, 0.5, 0, 0, 0, 20, 0, 0, 0 )
mesh = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 20, 0, 0, 0, 1, 0, 0, 0, 20, 0, -0.386602, 0 )
shape = SubResource( 3 )

[node name="Level1Holder" type="Spatial" parent="."]
visible = false

[node name="Level1" parent="Level1Holder" instance=ExtResource( 1 )]

[node name="spikes" parent="Level1Holder" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.04515, 3.56477, 0.86959 )

[node name="coinGold" parent="Level1Holder" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.99318, 4.5562, 1.99015 )

[node name="Area" type="Area" parent="Level1Holder"]

[node name="CollisionShape" type="CollisionShape" parent="Level1Holder/Area"]
transform = Transform( 95, 0, 0, 0, 100, 0, 0, 0, 100, 0, 18.5099, 0 )
shape = SubResource( 6 )

[node name="finish" type="Area" parent="Level1Holder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.24688, 5.53859, 2.05777 )

[node name="CollisionShape" type="CollisionShape" parent="Level1Holder/finish"]
transform = Transform( 0.5, 0, 0, 0, 0.4, 0, 0, 0, 0.5, 0, -0.388552, -0.0728741 )
shape = SubResource( 5 )

[node name="Level2Holder" type="Spatial" parent="."]

[node name="Level2" parent="Level2Holder" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.11695, 0, 0 )

[node name="chaman" parent="." instance=ExtResource( 7 )]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.5, 0 )

[connection signal="body_entered" from="Level1Holder/spikes" to="." method="_on_spikes_body_entered"]
[connection signal="body_entered" from="Level1Holder/coinGold" to="." method="_on_coinGold_body_entered"]
[connection signal="body_entered" from="Level1Holder/Area" to="chaman" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Level1Holder/finish" to="." method="_on_finish_body_entered"]
